--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="features-container">
             <div class="feature-card">
-                <center><img src="images/news.png" alt="Latest News Icon" class="feature-icon"></center>
+                <center><img src="/images/news.png" alt="Latest News Icon" class="feature-icon"></center>
                 <h3>Latest News</h3>
                 <p>Stay updated with breaking news in the gaming industry.</p>
             </div>
